@@ -988,6 +988,7 @@ CREATE TABLE ART_SETTINGS
 	PASSWORD_MIN_SPECIAL INTEGER,
 	JWT_TOKEN_EXPIRY INTEGER,
 	DIRECT_REPORT_EMAILING INTEGER,
+	JSON_OPTIONS CLOB,
 	UPDATE_DATE TIMESTAMP,
 	UPDATED_BY VARCHAR(50)
 );
