@@ -139,6 +139,7 @@ public class SettingsService {
 			settings.setPasswordMinSpecial(rs.getInt("PASSWORD_MIN_SPECIAL"));
 			settings.setJwtTokenExpiryMins(rs.getInt("JWT_TOKEN_EXPIRY"));
 			settings.setEnableDirectReportEmailing(rs.getBoolean("DIRECT_REPORT_EMAILING"));
+			settings.setJsonOptions(rs.getString("JSON_OPTIONS"));
 			settings.setUpdateDate(rs.getTimestamp("UPDATE_DATE"));
 			settings.setUpdatedBy(rs.getString("UPDATED_BY"));
 
@@ -268,9 +269,9 @@ public class SettingsService {
 				+ " ERROR_EMAIL_EXPIRE_AFTER, ERROR_EMAIL_DIGEST_FREQUENCY,"
 				+ " PASSWORD_MIN_LENGTH, PASSWORD_MIN_LOWERCASE, PASSWORD_MIN_UPPERCASE,"
 				+ " PASSWORD_MIN_NUMERIC, PASSWORD_MIN_SPECIAL, JWT_TOKEN_EXPIRY,"
-				+ " DIRECT_REPORT_EMAILING,"
+				+ " DIRECT_REPORT_EMAILING, JSON_OPTIONS,"
 				+ " UPDATE_DATE, UPDATED_BY)"
-				+ " VALUES(" + StringUtils.repeat("?", ",", 61) + ")";
+				+ " VALUES(" + StringUtils.repeat("?", ",", 62) + ")";
 
 		Object[] values = {
 			settings.getSmtpServer(),
@@ -332,6 +333,7 @@ public class SettingsService {
 			settings.getPasswordMinSpecial(),
 			settings.getJwtTokenExpiryMins(),
 			BooleanUtils.toInteger(settings.isEnableDirectReportEmailing()),
+			settings.getJsonOptions(),
 			DatabaseUtils.getCurrentTimeAsSqlTimestamp(),
 			actionUser.getUsername()
 		};
