@@ -116,7 +116,7 @@ ALTER TABLE PUBLIC.LOGGING_EVENT ALTER COLUMN EVENT_ID RESTART WITH 0
 CREATE MEMORY TABLE PUBLIC.LOGGING_EVENT_PROPERTY(EVENT_ID BIGINT NOT NULL,MAPPED_KEY VARCHAR(254) NOT NULL,MAPPED_VALUE VARCHAR(16777216),PRIMARY KEY(EVENT_ID,MAPPED_KEY),FOREIGN KEY(EVENT_ID) REFERENCES PUBLIC.LOGGING_EVENT(EVENT_ID))
 CREATE MEMORY TABLE PUBLIC.LOGGING_EVENT_EXCEPTION(EVENT_ID BIGINT NOT NULL,I SMALLINT NOT NULL,TRACE_LINE VARCHAR(2000) NOT NULL,PRIMARY KEY(EVENT_ID,I),FOREIGN KEY(EVENT_ID) REFERENCES PUBLIC.LOGGING_EVENT(EVENT_ID))
 CREATE MEMORY TABLE PUBLIC.ART_SMTP_SERVERS(SMTP_SERVER_ID INTEGER NOT NULL,NAME VARCHAR(50),DESCRIPTION VARCHAR(200),ACTIVE INTEGER,SERVER VARCHAR(100),PORT INTEGER,USE_STARTTLS INTEGER,USE_SMTP_AUTHENTICATION INTEGER,USERNAME VARCHAR(100),PASSWORD VARCHAR(200),SMTP_FROM VARCHAR(100),CREATION_DATE TIMESTAMP,CREATED_BY VARCHAR(50),UPDATE_DATE TIMESTAMP,UPDATED_BY VARCHAR(50),CONSTRAINT ART_SS_PK PRIMARY KEY(SMTP_SERVER_ID),CONSTRAINT ART_SS_NAME_UQ UNIQUE(NAME))
-CREATE MEMORY TABLE PUBLIC.ART_SETTINGS(SMTP_SERVER VARCHAR(100),SMTP_PORT INTEGER,SMTP_USE_STARTTLS INTEGER,USE_SMTP_AUTHENTICATION INTEGER,SMTP_USERNAME VARCHAR(100),SMTP_PASSWORD VARCHAR(200),SMTP_FROM VARCHAR(100),ART_AUTHENTICATION_METHOD VARCHAR(50),WINDOWS_DOMAIN_CONTROLLER VARCHAR(100),ALLOWED_WINDOWS_DOMAINS VARCHAR(200),DB_AUTHENTICATION_DRIVER VARCHAR(100),DB_AUTHENTICATION_URL VARCHAR(500),LDAP_SERVER VARCHAR(100),LDAP_PORT INTEGER,LDAP_ENCRYPTION_METHOD VARCHAR(50),LDAP_URL VARCHAR(500),LDAP_BASE_DN VARCHAR(500),USE_LDAP_ANONYMOUS_BIND INTEGER,LDAP_BIND_DN VARCHAR(500),LDAP_BIND_PASSWORD VARCHAR(200),LDAP_USER_ID_ATTRIBUTE VARCHAR(50),LDAP_AUTHENTICATION_METHOD VARCHAR(50),LDAP_REALM VARCHAR(200),CAS_LOGOUT_URL VARCHAR(100),MAX_ROWS_DEFAULT INTEGER,MAX_ROWS_SPECIFIC VARCHAR(500),PDF_FONT_NAME VARCHAR(50),PDF_FONT_FILE VARCHAR(500),PDF_FONT_DIRECTORY VARCHAR(500),PDF_FONT_ENCODING VARCHAR(50),PDF_FONT_EMBEDDED INTEGER,ADMIN_EMAIL VARCHAR(100),APP_DATE_FORMAT VARCHAR(50),APP_TIME_FORMAT VARCHAR(50),REPORT_FORMATS VARCHAR(200),MAX_RUNNING_REPORTS INTEGER,HEADER_IN_PUBLIC_SESSION INTEGER,MONDRIAN_CACHE_EXPIRY INTEGER,SCHEDULING_ENABLED INTEGER,RSS_LINK VARCHAR(500),MAX_FILE_UPLOAD_SIZE INTEGER,ART_BASE_URL VARCHAR(500),SYSTEM_LOCALE VARCHAR(50),LOGS_DATASOURCE_ID INTEGER,ERROR_EMAIL_TO VARCHAR(500),ERROR_EMAIL_FROM VARCHAR(100),ERROR_EMAIL_SUBJECT_PATTERN VARCHAR(50),ERROR_EMAIL_LEVEL VARCHAR(10),ERROR_EMAIL_LOGGER VARCHAR(200),ERROR_EMAIL_SUPPRESS_AFTER VARCHAR(30),ERROR_EMAIL_EXPIRE_AFTER VARCHAR(20),ERROR_EMAIL_DIGEST_FREQUENCY VARCHAR(20),PASSWORD_MIN_LENGTH INTEGER,PASSWORD_MIN_LOWERCASE INTEGER,PASSWORD_MIN_UPPERCASE INTEGER,PASSWORD_MIN_NUMERIC INTEGER,PASSWORD_MIN_SPECIAL INTEGER,UPDATE_DATE TIMESTAMP,UPDATED_BY VARCHAR(50),JWT_TOKEN_EXPIRY INTEGER,DIRECT_REPORT_EMAILING INTEGER)
+CREATE MEMORY TABLE PUBLIC.ART_SETTINGS(SMTP_SERVER VARCHAR(100),SMTP_PORT INTEGER,SMTP_USE_STARTTLS INTEGER,USE_SMTP_AUTHENTICATION INTEGER,SMTP_USERNAME VARCHAR(100),SMTP_PASSWORD VARCHAR(200),SMTP_FROM VARCHAR(100),ART_AUTHENTICATION_METHOD VARCHAR(50),WINDOWS_DOMAIN_CONTROLLER VARCHAR(100),ALLOWED_WINDOWS_DOMAINS VARCHAR(200),DB_AUTHENTICATION_DRIVER VARCHAR(100),DB_AUTHENTICATION_URL VARCHAR(500),LDAP_SERVER VARCHAR(100),LDAP_PORT INTEGER,LDAP_ENCRYPTION_METHOD VARCHAR(50),LDAP_URL VARCHAR(500),LDAP_BASE_DN VARCHAR(500),USE_LDAP_ANONYMOUS_BIND INTEGER,LDAP_BIND_DN VARCHAR(500),LDAP_BIND_PASSWORD VARCHAR(200),LDAP_USER_ID_ATTRIBUTE VARCHAR(50),LDAP_AUTHENTICATION_METHOD VARCHAR(50),LDAP_REALM VARCHAR(200),CAS_LOGOUT_URL VARCHAR(100),MAX_ROWS_DEFAULT INTEGER,MAX_ROWS_SPECIFIC VARCHAR(500),PDF_FONT_NAME VARCHAR(50),PDF_FONT_FILE VARCHAR(500),PDF_FONT_DIRECTORY VARCHAR(500),PDF_FONT_ENCODING VARCHAR(50),PDF_FONT_EMBEDDED INTEGER,ADMIN_EMAIL VARCHAR(100),APP_DATE_FORMAT VARCHAR(50),APP_TIME_FORMAT VARCHAR(50),REPORT_FORMATS VARCHAR(200),MAX_RUNNING_REPORTS INTEGER,HEADER_IN_PUBLIC_SESSION INTEGER,MONDRIAN_CACHE_EXPIRY INTEGER,SCHEDULING_ENABLED INTEGER,RSS_LINK VARCHAR(500),MAX_FILE_UPLOAD_SIZE INTEGER,ART_BASE_URL VARCHAR(500),SYSTEM_LOCALE VARCHAR(50),LOGS_DATASOURCE_ID INTEGER,ERROR_EMAIL_TO VARCHAR(500),ERROR_EMAIL_FROM VARCHAR(100),ERROR_EMAIL_SUBJECT_PATTERN VARCHAR(50),ERROR_EMAIL_LEVEL VARCHAR(10),ERROR_EMAIL_LOGGER VARCHAR(200),ERROR_EMAIL_SUPPRESS_AFTER VARCHAR(30),ERROR_EMAIL_EXPIRE_AFTER VARCHAR(20),ERROR_EMAIL_DIGEST_FREQUENCY VARCHAR(20),PASSWORD_MIN_LENGTH INTEGER,PASSWORD_MIN_LOWERCASE INTEGER,PASSWORD_MIN_UPPERCASE INTEGER,PASSWORD_MIN_NUMERIC INTEGER,PASSWORD_MIN_SPECIAL INTEGER,UPDATE_DATE TIMESTAMP,UPDATED_BY VARCHAR(50),JWT_TOKEN_EXPIRY INTEGER,DIRECT_REPORT_EMAILING INTEGER,JSON_OPTIONS VARCHAR(16777216))
 CREATE MEMORY TABLE PUBLIC.ART_SAVED_PARAMETERS(USER_ID INTEGER NOT NULL,REPORT_ID INTEGER NOT NULL,PARAM_NAME VARCHAR(60) NOT NULL,PARAM_VALUE VARCHAR(4000))
 CREATE MEMORY TABLE PUBLIC.ART_USER_PARAM_DEFAULTS(PARAM_DEFAULT_KEY VARCHAR(50) NOT NULL,USER_ID INTEGER NOT NULL,PARAMETER_ID INTEGER NOT NULL,PARAM_VALUE VARCHAR(4000))
 CREATE MEMORY TABLE PUBLIC.ART_USER_GROUP_PARAM_DEFAULTS(PARAM_DEFAULT_KEY VARCHAR(50) NOT NULL,USER_GROUP_ID INTEGER NOT NULL,PARAMETER_ID INTEGER NOT NULL,PARAM_VALUE VARCHAR(4000))
