@@ -35,6 +35,7 @@ Settings configuration page
 
 	<jsp:attribute name="javascript">
 		<script type="text/javascript" src="${pageContext.request.contextPath}/js/bootstrap-switch/js/bootstrap-switch.min.js"></script>
+		<script type="text/javascript" src="${pageContext.request.contextPath}/js/ace-min-noconflict-1.4.2/ace.js" charset="utf-8"></script>
 
 		<script type="text/javascript">
 			$(document).ready(function () {
@@ -79,6 +80,21 @@ Settings configuration page
 				//activate dropdown-hover. to make bootstrap-select open on hover
 				//must come after bootstrap-select initialization
 				initializeSelectHover();
+
+				var jsonEditor = ace.edit("jsonEditor");
+				jsonEditor.getSession().setMode("ace/mode/json");
+				jsonEditor.setHighlightActiveLine(false);
+				jsonEditor.setShowPrintMargin(false);
+				jsonEditor.setOption("showLineNumbers", false);
+				jsonEditor.setOption("maxLines", 20);
+				jsonEditor.setOption("minLines", 7);
+				document.getElementById('jsonEditor').style.fontSize = '14px';
+
+				var options = $('#jsonOptions');
+				jsonEditor.getSession().setValue(options.val());
+				jsonEditor.getSession().on('change', function () {
+					options.val(jsonEditor.getSession().getValue());
+				});
 
 				$('#updateEncryptionKey').on("click", function () {
 					bootbox.confirm({
@@ -1053,6 +1069,17 @@ Settings configuration page
 						</div>
 					</div>
 				</fieldset>
+
+				<hr>
+				<div class="form-group">
+					<label class="control-label col-md-12" style="text-align: center" for="jsonOptions">
+						<spring:message code="page.label.options"/>
+					</label>
+					<div class="col-md-12">
+						<form:hidden path="jsonOptions"/>
+						<div id="jsonEditor" style="height: 200px; width: 100%; border: 1px solid black"></div>
+					</div>
+				</div>
 
 				<div class="form-group">
 					<div class="col-md-12">
