@@ -1,5 +1,6 @@
 ART 4.3
 * Added file and fileZip report formats for FreeMarker, Velocity and Thymeleaf report types
+* Removed pdf export by default for htmlDataTable report format
 
 ART 4.2
 * Added use_api permission
